# Base1000QianZiWenCodec

./: .gitignore  Base1000.py  BaseTCC.py  Cargo.toml  Makefile.am  README  README.md  README.zh_CN.md  base1000.cc  base1000.py  config.h  config.hpp  config.hpp.in  configure.ac  decode.cc  decode.h  decode.hpp  decode.py  encode.cc  encode.h  encode.hpp  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
base1000/: __init__.py  __main__.py  _run.py  base1000.pyi
src/: decode.rs  encode.rs  lib.rs  main.rs
tests/: test_decode.py  test_encode.py
千字文/: 1.txt  2.txt  3.txt  4.txt  5.txt  cache.json
