[package]
name = "base1000"
version = "0.1.0"
authors = ["Li Hua <lihua@email.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/real-LiHua/Base1000QianZiWenCodec"
keywords = ["base1000"]
categories = ["command-line-utilities", "encoding"]
include = ["/src/*.rs"]

[lib]
name = "base1000"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
itertools = "0.14.0"
num-bigint = "0.4.6"
pyo3 = "0.24.0"
rand = "0.9.0"
rust-embed = { version = "8.6.0", features = ["debug-embed", "include-exclude"] }
