[package]
name = "base1000"
version = "0.1.0"
authors = ["Li Hua <lihua@email.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/real-LiHua/Base1000QianZiWenCodec"
keywords = ["base1000"]
categories = ["command-line-utilities", "encoding"]
include = ["/src/*.rs"]

[lib]
name = "base1000"
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5.31", features = ["derive"], optional = true }
itertools = "0.14.0"
num-bigint = "0.4.6"
pyo3 = { version="0.24.0", optional = true }
rand = "0.9.0"
rust-embed = { version = "8.6.0", features = ["debug-embed", "include-exclude"] }

[features]
encode = []
decode = []
default = ["clap", "encode", "decode"]

[[bin]]
name = "base1000"
required-features = ["clap"]
