[package]
name = "base1000"
version = "0.1.1"
authors = ["Li Hua <lihua@email.com>"]
edition = "2024"
description = 'A text encoder based on the "Thousand Character Classic"'
documentation = "https://docs.rs/base1000"
readme = "README.md"
repository = "https://github.com/real-LiHua/Base1000QianZiWenCodec"
license = "Apache-2.0"
keywords = ["base1000"]
categories = ["command-line-utilities", "encoding"]
include = ["/src/*.rs", "/千字文/*.txt"]

[lib]
name = "base1000"
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.4"
clap = { version = "4.5.49", features = ["derive"], optional = true }
itertools = "0.14.0"
num-bigint = "0.4.6"
pyo3 = { version="0.27.0", features = ["experimental-inspect"], optional = true }
rand = "0.9.2"
rust-embed = { version = "8.8.0", features = ["debug-embed", "include-exclude"] }

[features]
encode = []
decode = []
default = ["clap", "encode", "decode"]

[[bin]]
name = "base1000"
required-features = ["clap"]

[profile.release]
lto = true
strip = "symbols"
