[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "base1000"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
scripts.base1000 = "base1000:_run.cli"
optional-dependencies.mcp = [ "mcp[cli]>=1.9.4" ]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-v", "--import-mode=prepend"]
pythonpath = "src"
testpaths = ["tests"]
